ing.yaml
## annotation alb.ingress.kubernetes.io/certificate-arn: need to 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 5inque-ing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: { c e r t i f i c a t e ARN : enter the console and copy arn and paste }
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inque-web
            port:
              number: 8080
